gcc/testsuite/gdc.test/compilable/test19778.d
struct S
{
    int[] data;
}
immutable X = S([]);
enum len = X.data.length;
