gcc/testsuite/gdc.test/fail_compilation/imports/test21164c.d
enum S = 1;

struct O
{
}

struct R(O U, int W)
{
}

